@@ -5,7 +5,6 @@ import com.example.sms.entity.Student;
 import com.example.sms.repository.KlassenRepository;
 import com.example.sms.service.KlassenService;
 import org.springframework.stereotype.Service;
-import java.util.stream.Collectors;
 
 import java.util.List;
 
@@ -45,7 +44,7 @@ public class KlassenServiceImpl implements KlassenService {
     public List<Student> getStudentsKlasse() {
        List<Student>allStudentsList = StudentServiceImpl.studentRepository.findAll();
        List<Student>klasseStudentsList = allStudentsList.stream().filter(student -> student.getKlasse()
-                .equals(Klasse.getKlasseName()).collect(Collectors.toList());
+                .equals(Klasse.getKlasseName())).toList();
        return klasseStudentsList;
     }
 }
